add Spring data and get JPA working with JDK 9