@@ -23,7 +23,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<kotlin.version>1.1.50</kotlin.version>
+		<kotlin.version>1.1.61</kotlin.version>
 		<!--<spring-cloud.version>Dalston.SR3</spring-cloud.version>-->
 	</properties>
 
@@ -69,6 +69,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib-jre8</artifactId>
@@ -121,19 +136,51 @@
                 <version>3.0.2</version>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <!-- Adding the java.se.ee module pulls in javax.xml, java.xml.bind, etc -->
+                        <!--<arg>&#45;&#45;add-modules java.se.ee</arg>-->
+                        <arg>--add-modules</arg>
+                        <arg>java.se.ee</arg>
+                        <arg>--upgrade-module-path</arg>
+                        <arg>--illegal-access=permit</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+                <!-- The latest surefire plugin will add java.se.ee by default which pulls in java.xml.bind, java.transaction, etc -->
+                <!-- https://maven.apache.org/surefire/maven-surefire-plugin/java9.html -->
+            </plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>--add-modules java.xml.bind --illegal-access=permit</jvmArguments>
+                    <!--<jvmArguments>&#45;&#45;add-modules java.se.ee &#45;&#45;illegal-access=permit</jvmArguments>-->
+                </configuration>
 			</plugin>
+
 			<plugin>
-				<artifactId>kotlin-maven-plugin</artifactId>
-				<groupId>org.jetbrains.kotlin</groupId>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
 				<version>${kotlin.version}</version>
 				<configuration>
 					<compilerPlugins>
 						<plugin>spring</plugin>
+                        <plugin>jpa</plugin>
 					</compilerPlugins>
-					<jvmTarget>1.8</jvmTarget>
+                    <pluginOptions>
+                        <option>jpa:annotation=javax.persistence.Entity</option>
+                    </pluginOptions>
+					<jvmTarget>${java.version}</jvmTarget>
 				</configuration>
 				<executions>
 					<execution>
@@ -157,6 +204,11 @@
 						<artifactId>kotlin-maven-allopen</artifactId>
 						<version>${kotlin.version}</version>
 					</dependency>
+                    <dependency>
+                        <groupId>org.jetbrains.kotlin</groupId>
+                        <artifactId>kotlin-maven-noarg</artifactId>
+                        <version>${kotlin.version}</version>
+                    </dependency>
 				</dependencies>
 			</plugin>
 		</plugins>
